finished about section

--- a/sass/_3-vars.sass
+++ b/sass/_3-vars.sass
@@ -9,7 +9,6 @@ $secondary: 'Roboto Slab', sans-serif
 
 // ---------------------------------------------------
 // ----------------- TYPOGRAPHY-----------------------
-
 h1,
 h2
   font-family: $secondary
@@ -24,7 +23,7 @@ h2
 
 p
   font-family: $primary
-  line-height: 1.5em
+  line-height: 2em
 
 
 // -----------------------------------------------------
@@ -34,3 +33,6 @@ p
   min-width: 320px
   max-width: 1000px
   margin: 0 auto
+
+ul
+  list-style: none
