added wireframe section

--- a/sass/_5-main.sass
+++ b/sass/_5-main.sass
@@ -47,7 +47,7 @@ button#login
   width: 250px
   height: 239px
 
-// ---------------------HEADER BODY--------------------
+// ---------------------ABOUT SECTION--------------------
 section.about
   display: flex
   justify-content: center
@@ -72,3 +72,34 @@ section.about
     .fa-facebook
       padding: 12px 19px
 // Icons on the left of the contnet. Used FA and then style cicles and hover
+
+
+// ---------------------WIREFRAME SECTION--------------------
+section.wireframe
+  // position: relative
+  background-color: $green
+  color: white
+  .header-wireframe
+    width: 800px
+    margin: 0 auto
+  h1
+    padding-top: 1.8em
+    font-family: $primary
+    font-weight: bold
+    font-size: 3em
+  h3
+    font-family: $primary
+    font-weight: 100
+    font-size: 2em
+  .content-wireframe
+    position: relative
+  i
+    color: white
+  .fa-chevron-circle-left
+    position: absolute
+    top: 50%
+    left: -100px
+  .fa-chevron-circle-right
+    position: absolute
+    top: 50%
+    right: -100px
