--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -1,4 +1,4 @@
-@import url(https://fonts.googleapis.com/css?family=Roboto);
+@import url(https://fonts.googleapis.com/css?family=Roboto:400,100);
 @import url(https://fonts.googleapis.com/css?family=Roboto+Slab);
 /*! normalize.css v3.0.2 | MIT License | git.io/normalize */
 /**
@@ -635,4 +635,48 @@ section.about a .fa-pencil {
 /* line 72, ../sass/_5-main.sass */
 section.about a .fa-facebook {
   padding: 12px 19px;
+}
+
+/* line 78, ../sass/_5-main.sass */
+section.wireframe {
+  background-color: #51A575;
+  color: white;
+}
+/* line 82, ../sass/_5-main.sass */
+section.wireframe .header-wireframe {
+  width: 800px;
+  margin: 0 auto;
+}
+/* line 85, ../sass/_5-main.sass */
+section.wireframe h1 {
+  padding-top: 1.8em;
+  font-family: "Roboto", sans-serif;
+  font-weight: bold;
+  font-size: 3em;
+}
+/* line 90, ../sass/_5-main.sass */
+section.wireframe h3 {
+  font-family: "Roboto", sans-serif;
+  font-weight: 100;
+  font-size: 2em;
+}
+/* line 94, ../sass/_5-main.sass */
+section.wireframe .content-wireframe {
+  position: relative;
+}
+/* line 96, ../sass/_5-main.sass */
+section.wireframe i {
+  color: white;
+}
+/* line 98, ../sass/_5-main.sass */
+section.wireframe .fa-chevron-circle-left {
+  position: absolute;
+  top: 50%;
+  left: -100px;
+}
+/* line 102, ../sass/_5-main.sass */
+section.wireframe .fa-chevron-circle-right {
+  position: absolute;
+  top: 50%;
+  right: -100px;
 }
